# greetings

./: .ci.rosinstall  .gitlab-ci.yml  CMakeLists.txt  package.xml
launch/: move_sender.launch
scripts/: greetings.py
